<resources>
    <string name="app_name">MyfirstAppFoME</string>
    <string name="Log_In">Log In </string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Video list</string>
    <string name="menu_gallery">Add video</string>
    <string name="menu_slideshow">Favorite video</string>
    <string name="GetRandom"> Random video</string>

    <string name="home_second">Home Second</string>
    <string name="author">about author</string>
    <string name="pass">неправильний пароль</string>
    <string name="cast">Casts</string>
    <string name="add_name">movie name</string>
    <string name="add_description">movie description</string>
    <string name="add_comment">your comments for the movie </string>
    <string name="add_button_text">save movie</string>
    <string name="AddCast"> Add Cast</string>
    <string name="add_movie_title">Add movie to the library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="company_name">Dimasic INC</string>
    <string name="show_image">show image</string>
    <string name="start_image">Start image</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="d">D</string>
    <string name="button_get_random_movie">get Random Movie</string>
    <string name="image_show_movie">Image show movie</string>
    <string name="star">show is favorite this movie</string>
    <string name="star_add_movie">set is favorite movie</string>
    <string name="add_cast">Add Cast</string>
    <string name="choise_your_photo">choise your photo</string>
    <string name="add_image">add image</string>
    <string name="select_image_in_your_galery">select image in your galery</string>
</resources>
