<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_favorite"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_random_video"
            android:title="@string/GetRandom"/>
        <item
            android:id="@+id/aboutAuthor"
            android:title="@string/author"/>
        <item
            android:id="@+id/Music"
            app:actionLayout="@layout/nav_header_switch"
            android:title="@string/music"/>
    </group>
</menu>
