<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfirstappfome.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myfirstappfome.ui.AddMovie.AddMovie"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_add_movie" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.myfirstappfome.ui.favorite.FavoriteFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_random_video"
        android:name="com.example.myfirstappfome.ui.getRandomVideo"
        android:label="@string/GetRandom"
        tools:layout="@layout/fragment_random" />
</navigation>