<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context=".ui.Casts.addcast.AddCast">

    <TextView
        android:id="@+id/addCast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:text="@string/add_cast"
        android:textSize="@dimen/Add_movie_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:hint="@string/add_name"
        android:text="@string/add_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/addCast">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CastName"
            android:layout_width="200dp"
            android:layout_height="@dimen/Add_movie_name"
            android:textSize="@dimen/Add_movie_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fieldName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:hint="@string/add_name"
        android:text="@string/add_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fieldName">

        <EditText
            android:id="@+id/CastDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Add_movie_description"
            android:autofillHints="movie Descriotion : "
            android:inputType="text"
            android:text=""
            android:textSize="@dimen/Add_movie_text_size"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultMargin"
        android:hint="@string/add_comment"
        android:text="@string/add_button_text"
        app:layout_constraintTop_toBottomOf="@id/descriptionlayout">

        <EditText
            android:id="@+id/CastComment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Add_movie_comment"
            android:autofillHints="movie coment :"
            android:inputType="text"
            android:textSize="@dimen/Add_movie_text_size"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Add_movie_button"
        android:layout_margin="@dimen/defaultMargin"
        android:onClick="onClick"
        android:text="@string/add_button_text"
        app:layout_constraintTop_toBottomOf="@id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>